--- a/SarahBesnainou-sarahbes/d5/capetown_guide/views/place.erb
+++ b/SarahBesnainou-sarahbes/d5/capetown_guide/views/place.erb
@@ -1,22 +1,51 @@
+<head>
+<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+</head>
+
 <style>
-
 body {
-	position: center;
-
+	text-align: center;
 }
-
 h1 {
+	font-size: 55px;
 	font-family: 'Lato', sans-serif;
-
-}
-
-
-
-img {
-	 height: 280px;
-      width:345px;
-}
+	color: white;
 	
+}
+h2 {
+	 font-family: 'Lato', sans-serif;
+      font-weight: 400;
+	  font-size: 30px;
+	color: black;
+}
+p {
+	font-size: 20px;
+      font-family: 'Source Sans Pro', sans-serif; 	
+}
+div{
+	background-color: #ADD6FF; 
+	border-radius: 24px;
+}
+img {
+	 height: 400px;
+     width: 550px;
+     border-radius: 24px;
+}
+li {
+	list-style-type: none;
+	padding-right: 20px;
+	font-size: 25px;
+	display: inline;
+}
+a {
+		font-family: 'Lato', sans-serif;
+      font-weight: 400;
+	  font-size: 35px;
+	  color: black;
+	      text-decoration: none;
+	  }
 </style>
 
 <h1> <%= @name %> </h1>
