--- a/SarahBesnainou-sarahbes/d8/cheetah_watch/app/views/animals/_form.html.erb
+++ b/SarahBesnainou-sarahbes/d8/cheetah_watch/app/views/animals/_form.html.erb
@@ -1,19 +1,17 @@
-<%= form_for @animal do |f| %>
- 
-  <% if @animal.errors.any? %>
+
+ <% if @animal.errors.any? %>
     <div id="error_explanation">
-      <h2>
-        <%= pluralize(@animal.errors.count, "error") %> prohibited
-        this animal from being saved:
-      </h2>
+      <h2><%= pluralize(@animal.errors.count, "error") %> prohibited this animal from being saved:</h2>
+
       <ul>
-        <% @animal.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
+      <% @animal.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
       </ul>
     </div>
   <% end %>
- 
+  
+ <%= form_for @animal do |f| %>
   <div>
     <%=f.label :name %>
     <%= f.text_field :name %>
@@ -27,6 +25,11 @@
   <div>
     <%=f.label :life_expectancy %>
     <%= f.text_field :life_expectancy %>
+  </div>
+
+  <div>
+    <%=f.label :rideable %>
+    <%= f.text_field :rideable %>
   </div>
 
   <p>
