--- a/SarahBesnainou-sarahbes/d8/cheetah_watch/app/views/animals/index.html.erb
+++ b/SarahBesnainou-sarahbes/d8/cheetah_watch/app/views/animals/index.html.erb
@@ -16,7 +16,7 @@
       <td><%= link_to 'Edit', edit_animal_path(animal) %></td>
       <td><%= link_to 'Destroy', animal_path(animal),
               method: :delete,
-              data: { confirm: 'Are you sure?' } %></td>
+              data: { confirm: "Are you sure you want to delete?" } %></td>
     </tr>
   <% end %>
 </table>
