--- a/SarahBesnainou-sarahbes/d8/lekker_plekke/app/views/places/show.html.erb
+++ b/SarahBesnainou-sarahbes/d8/lekker_plekke/app/views/places/show.html.erb
@@ -1,5 +1,33 @@
 <h1><%= @place.name %></h1>
 <p><%= @place.description %></p>
 
+<h2>Comments</h2>
+<% @place.comments.each do |comment| %>
+  <p>
+    <strong>Commenter:</strong>
+    <%= comment.commenter %>
+  </p>
+ 
+  <p>
+    <strong>Comment:</strong>
+    <%= comment.body %>
+  </p>
+<% end %>
+
+<h2>Add a comment:</h2>
+<%= form_for([@place, @place.comments.build]) do |f| %>
+  <p>
+    <%= f.label :commenter %><br>
+    <%= f.text_field :commenter %>
+  </p>
+  <p>
+    <%= f.label :text %><br>
+    <%= f.text_area :text %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
+
 <%= link_to 'Edit', edit_place_path(@place) %> |
 <%= link_to 'Back', places_path %>
